app component ready
