# app/resources/listing.py
@@ -1,7 +1,7 @@
 from webargs import fields
 from webargs.flaskparser import use_kwargs
 from app import parse
-from app.model import LISTING_TYPES
+from app.model import LISTING_TYPES, AMENITY_TYPES
 from marshmallow import validate
 from app.resources import DefaultSchema, DefaultResource
 from app.model import db, Listing, rollback_on_exception
@@ -9,19 +9,21 @@ from webargs.flaskparser import use_kwargs
 
 
 class ArgsListingSearch(DefaultSchema):
-    name = fields.String(required=True, location='json')
-    listing_url = fields.String(required=True, location='json', validate=validate.URL)
-    size_in_meters = fields.Float(required=True, location='json')
-    room_count = fields.Integer(required=True, location='json')
+    keywords = fields.String(location='json')
+    min_rent = fields.Integer(location='json')
+    max_rent = fields.Integer(location='json')
+    min_surface_area = fields.Integer(location='json')
+    max_surface_area = fields.Integer(location='json')
+    min_room_count = fields.Integer(location='json')
+    max_room_count = fields.Integer(location='json')
     is_furnished = fields.Boolean(location='json', missing=False)
-    accomodation_type = fields.String(
+    listing_type = fields.String(
         required=True,
         location='query',
         validate=validate.OneOf(choices=LISTING_TYPES))
-    geometry = fields.Dict(
-        required=True,
-        location='json',
-        validate=parse.validate_geometry)
+    amenities = fields.DelimitedList(fields.String(validate=validate.OneOf(
+        choices=AMENITY_TYPES)), location='query', required=False)
+    limit = fields.Integer(location='json', default=10)
 
 
 class ListingResource(DefaultResource):
@@ -55,6 +57,6 @@ class ListingSearchResource(DefaultResource):
     @rollback_on_exception
     @use_kwargs(ArgsListingSearch)
     def get(self,
-            keywords, min_surface_area, max_surface_area, min_room_count, max_room_count, is_furnished,
-            accomodation_type, listing_type, amenities, **kwargs):
+            keywords, min_rent, max_rent, min_surface_area, max_surface_area, min_room_count, max_room_count,
+            is_furnished, listing_type, amenities, **kwargs):
         return []
